[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-spatial-qa"
version = "1.0.0"
description = "OpenEnv Hackathon: Spatial reasoning benchmark for warehouse QA"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Dinesh Kumar", email = "dinesh@example.com"}]
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.5.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "openenv-core>=0.1.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Dinesh-Kumar-26/warehouse-spatial-qa"
Repository = "https://github.com/Dineshdharman/warehouse-spatial-qa"
Documentation = "https://github.com/Dineshdharman/warehouse-spatial-qa#readme"

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]
